[tool.poetry]
package-mode = false
name = "wavelet"
version = "0.1.0"
description = ""
authors = ["Tnixc <tnixxc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
PyWavelets = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
